<resources>
    <string name="app_name">Diet!n</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.
    </string>
    <string name="loading">•••</string>
    <string name="no_data">Tidak ada data</string>
    <string name="login_welcome">Selamat Datang!</string>
    <string name="login">Masuk ke Akun</string>
    <string name="login_hint_forget_password"><u>Lupa Password</u></string>
    <string name="login_hint_no_account">Belum ada Akun? <u><b>Daftar</b></u>.</string>
    <string name="login_hint_log_in">Masuk</string>
    <string name="login_hint_login_with_google">Masuk dengan Google</string>
    <string name="login_or">atau</string>
    <string name="register_welcome">Salam Kenal! :)</string>
    <string name="register">Daftar Akun Baru</string>
    <string name="register_hint_have_account">Sudah memiliki Akun? <u><b>Masuk</b></u>.</string>
    <string name="attribute_username">Username</string>
    <string name="attribute_password">Password</string>
    <string name="attribute_email">Email</string>
    <string name="attribute_name">Nama</string>
    <string name="attribute_gender">Jenis Kelamin</string>
    <string name="login_hint_make_account">Buat Akun</string>
    <string-array name="genders">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>
    <string-array name="diet_tips">
        <item>bahwa dengan minum teh hijau secara teratur dapat meningkatkan metabolisme dan membantu penurunan berat badan karena kandungan katekinnya yang tinggi?</item>
        <item>bahwa rempah-rempah tertentu seperti kunyit dan kayu manis memiliki sifat antiradang dan dapat mendukung pencernaan yang sehat jika dimasukkan ke dalam makananmu?</item>
        <item>bahwa mengonsumsi asam lemak omega-3, yang ditemukan dalam makanan seperti salmon dan kenari, dapat membantu menurunkan risiko penyakit jantung dan meningkatkan kesehatan otak?</item>
        <item>bahwa dark chocolate dengan persentase kakao yang tinggi (70% atau lebih) mengandung antioksidan dan mungkin memiliki efek positif pada kesehatan jantung jika dikonsumsi dalam jumlah sedang?</item>
        <item>bahwa probiotik, yang biasa ditemukan dalam yogurt dan makanan fermentasi, dapat meningkatkan mikrobioma usus yang sehat dan mendukung kesehatan pencernaan?</item>
        <item>bahwa alpukat adalah sumber lemak sehat yang baik dan mengandung serat, yang dapat membantu mengatur kadar kolesterol dan membuat kamu merasa kenyang lebih lama?</item>
        <item>bahwa buah beri, seperti blueberry dan stroberi, dikemas dengan antioksidan yang dapat melindungi dari kerusakan sel dan membantu meningkatkan daya ingat dan fungsi kognitif?</item>
        <item>bahwa sayuran silangan seperti brokoli, kol, dan kembang kol kaya akan vitamin, mineral, dan serat, dan mungkin memiliki sifat melawan kanker?</item>
        <item>bahwa memasukkan legum seperti lentil, buncis, dan kacang hitam ke dalam makanan kamu dapat memberikan sumber protein, serat, dan nutrisi nabati yang baik?</item>
        <item>bahwa minum air dalam jumlah yang cukup dapat meningkatkan metabolisme, membantu pencernaan, dan membantu menjaga kesehatan kulit?</item>
    </string-array>
    <string name="title_home">Home</string>
    <string name="title_search">Cari Hidangan</string>
    <string name="title_favourite">Favorit</string>
    <string name="title_profile">Profil</string>
    <string name="title_history">History</string>
    <string name="home_welcome">Selamat %s, &lt;b&gt;%s&lt;/b&gt;!</string>
    <string name="home_calories_target">Target: &lt;b&gt;%s Kalori&lt;/b&gt;</string>
    <string name="eat_title">Makan %s</string>
    <string name="tv_eat_time">%s WIB</string>
    <string name="user_calories">&lt;b&gt;%d&lt;/b&gt;</string>
    <string name="calories">Kalori</string>
    <string name="home_intro">Makan apa hari ini?</string>
    <string name="food_cal">%s kal</string>
    <string name="home_percent_calories">&lt;b&gt;%.0f%%&lt;/b&gt;&lt;br&gt;Terpenuhi</string>
    <string name="hint_view_diary">Lihat Diary</string>
    <string name="hint_search_food">Cari Makanan atau Resep</string>
    <string name="hint_recommended">Rekomendasi Untukmu</string>
    <string name="hint_did_you_know">Tahukah kamu…?</string>
    <string name="msa_morning_desc">Awali pagimu dengan sarapan yang sehat dan bergizi!</string>
    <string name="msa_afternoon_desc">Waktunya makan siang! Diet tidak berarti kamu harus menahan lapar, lho!</string>
    <string name="msa_evening_desc">Makan malam yang sehat dan bergizi dapat membantu kamu tidur lebih nyenyak!</string>
    <string name="msa_snack_desc">Jam nanggung? Cemilan sehat dapat membantu kamu tetap fokus!</string>
    <string name="txt_morning">pagi</string>
    <string name="txt_afternoon">siang</string>
    <string name="txt_evening">sore</string>
    <string name="txt_night">malam</string>
    <string name="snacks">Cemilan</string>
    <string name="food_time_text">Makan %s</string>
    <string name="hint_latest_search">Pencarian Terbaru</string>
    <string name="hint_delete_all">Hapus semua</string>
    <string name="title_add_food">Tambah Makanan</string>
    <string name="title_change_profile">Mengubah Profil</string>
    <string name="hint_change_profile">Ubah Profil</string>
    <string name="successfully_updated">Berhasil memperbarui profil</string>
    <string name="successfully_logout">Berhasil keluar dari akun</string>
    <string name="session_expired">Sesi telah berakhir, silakan masuk kembali</string>
    <string name="afh_food_img">Gambar makanan</string>
    <string name="afh_num_portions">Jumlah porsi: %s</string>
    <string name="afh_title_nutrition">Kandungan Saji</string>
    <string name="afh_nut_label_carbs">Karbohidrat</string>
    <string name="afh_nut_label_fats">Lemak</string>
    <string name="afh_nut_label_proteins">Protein</string>
    <string name="afh_title_daily_calories">Kebutuhan Kalori Harian</string>
    <string name="afh_cal_label_fulfilled">Sudah terpenuhi</string>
    <string name="afh_cal_label_will_fulfill">Akan dipenuhi</string>
    <string name="afh_cal_desc">&lt;b&gt;%s&lt;/b&gt; dari &lt;b&gt;%s&lt;/b&gt; Kalori terpenuhi.</string>
    <string name="afh_cal_over_recommended">Tampaknya kebutuhan kalori harianmu sudah tercukupi. Makanan ini akan membuat kamu kegemukan!</string>
    <string name="afh_title_eaten_at">Kapan Dihidangkan?</string>
    <string name="afh_eat_label_date">Tanggal</string>
    <string name="afh_eat_label_time">Waktu</string>
    <string name="afh_save_meal">Simpan</string>
    <string name="afh_success_add_food">Berhasil menambahkan hidangan ke history!</string>
    <string name="hint_pick_date">Pilih Tanggal</string>
    <string name="hint_total_calories">Total Kalori</string>
    <string name="hint_target_calories">Target Kalori</string>
    <string name="fd_nut_label_calories">kalori</string>
    <string name="fd_nut_label_carbs">karbo</string>
    <string name="fd_nut_label_fats">lemak</string>
    <string name="fd_nut_label_proteins">protein</string>
    <string name="fd_nut_unit_grams">%sg</string>
    <string name="fd_title_ingredients">Bahan yang dibutuhkan</string>
    <string name="fd_title_steps">Langkah-langkah</string>
    <string name="fd_btn_add">Tambah ke History</string>
    <string name="ob_btn_next">Lanjut</string>
    <string name="ob_btn_loading">Memuat data…</string>
    <string name="ob1_title">Hidup sehatmu dimulai di sini.</string>
    <string name="ob1_desc">Diet!n akan membantumu mencapai gaya hidup sehat yang kamu inginkan.</string>
    <string name="ob1_user_data_request">Sebelum memulai, Diet!n perlu beberapa\ndata dirimu dulu agar lebih mengenalmu!</string>
    <string name="ob2_title">Tujuan</string>
    <string name="ob2_desc">Apakah kamu ingin menaikkan, menurunkan, atau menjaga berat badanmu?</string>
    <string name="ob2_o1_title">Menurunkan berat badan</string>
    <string name="ob2_o1_desc">Kamu ingin menurunkan berat badan, misalnya karena kamu merasa terlalu gemuk atau ingin lebih sehat.</string>
    <string name="ob2_o2_title">Menjaga berat badan</string>
    <string name="ob2_o2_desc">Kamu ingin menjaga berat badanmu agar tetap ideal.</string>
    <string name="ob2_o3_title">Menaikkan berat badan</string>
    <string name="ob2_o3_desc">Kamu ingin menaikkan berat badan, misalnya karena kamu merasa terlalu kurus atau ingin lebih sehat.</string>
    <string name="ob3_title">Tingkatan Aktivitas</string>
    <string name="ob3_desc">Seberapa sering kamu beraktivitas setiap hari?</string>
    <string name="ob3_o1_title">Jarang beraktivitas (sedentary)</string>
    <string name="ob3_o1_desc">Kamu jarang beraktivitas, seperti hanya duduk atau berbaring saja. Contohnya, kamu hanya duduk di depan komputer atau TV, atau hanya berbaring di tempat tidur.</string>
    <string name="ob3_o2_title">Sedikit beraktivitas (lightly active)</string>
    <string name="ob3_o2_desc">Kamu sedikit beraktivitas, seperti berjalan–jalan atau berdiri. Contohnya, kamu berjalan–jalan di rumah atau di kantor. Kamu berolahraga kurang lebih 1–3 hari seminggu.</string>
    <string name="ob3_o3_title">Cukup aktif (moderately active)</string>
    <string name="ob3_o3_desc">Sebagian besar waktu harianmu dipakai untuk beraktifitas. Kamu berolahraga kurang lebih 3–5 hari seminggu.</string>
    <string name="ob3_o4_title">Aktif (active)</string>
    <string name="ob3_o4_desc">Kamu rutin melakukan aktifitas fisik setiap hari dalam skala ringan–sedang, seperti berolahraga 6–7 hari seminggu.</string>
    <string name="ob3_o5_title">Sangat aktif (very active)</string>
    <string name="ob4_title">Data Diri</string>
    <string name="ob4_desc">Langkah terakhir! Kami perlu data dirimu agar semua perhitungan bisa dilakukan dengan benar!</string>
    <string name="ob4_desc_weight_height">Tinggi dan berat diperlukan untuk bisa menghitung kalori dengan benar. Jika ada perubahan, bisa diedit di menu profil!</string>
    <string name="ob4_label_height">Tinggi</string>
    <string name="ob4_label_weight">Berat</string>
    <string name="ob4_desc_age">Umur diperlukan juga untuk bisa menghitung kalori dengan benar.</string>
    <string name="ob4_label_age">Umur</string>
    <string name="ob4_desc_target_weight">Berapa berat badan yang kamu harapkan dengan menggunakan aplikasi ini?</string>
    <string name="ob4_label_target_weight">Berat Badan Harapan</string>
    <string name="ob4_warning_title">Setelah kamu klik lanjut, data yang diinput akan disimpan.</string>
    <string name="ob4_warning_desc">Silakan periksa kembali semua data yang sudah diisi sebelum menekan tombol lanjut!</string>
</resources>