<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="academy.bangkit.capstone.dietin.ui.main_screen.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="academy.bangkit.capstone.dietin.ui.main_screen.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="academy.bangkit.capstone.dietin.ui.main_screen.favourite.FavouriteFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_favourite" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="academy.bangkit.capstone.dietin.ui.main_screen.history.HistoryFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_history" />
</navigation>