<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.fragments.page1.Onboarding1Fragment"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@android:color/transparent">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="300dp"
        android:layout_height="300dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/lottie132618"
        android:layout_marginBottom="24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob1_title"
        android:textSize="24sp"
        android:textColor="@color/gunmetal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob1_desc"
        android:textSize="16sp"
        android:textColor="@color/gunmetal"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ob1_user_data_request"
        android:textColor="@color/gunmetal"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

</LinearLayout>