<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/tv_eat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat_title"
            android:textSize="@dimen/text_size_sub2"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_eat_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_eat_time"
            android:textSize="@dimen/text_size_sub5"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/tv_eat_title"
            app:layout_constraintStart_toStartOf="@id/tv_eat_title"/>

        <ImageView
            android:id="@+id/iv_eat_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_eat_time_morning"
            app:layout_constraintStart_toStartOf="@id/tv_eat_time"
            app:layout_constraintTop_toBottomOf="@id/tv_eat_time" />

        <TextView
            android:id="@+id/tv_calories_eaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_calories"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/iv_eat_icon"
            app:layout_constraintTop_toTopOf="@id/iv_eat_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/calories"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_sub4"
            app:layout_constraintStart_toStartOf="@+id/tv_calories_eaten"
            app:layout_constraintTop_toBottomOf="@+id/tv_calories_eaten" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>