<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#00000000"
    android:paddingBottom="24dp"
    android:elevation="2dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    tools:context=".ui.main_screen.profile.edit.EditProfileFragment">

<!--    <com.airbnb.lottie.LottieAnimationView-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_gravity="end"-->
<!--        android:layout_marginEnd="40dp"-->
<!--        app:lottie_rawRes="@raw/lotties_worms"-->
<!--        app:lottie_autoPlay="true"-->
<!--        app:lottie_loop="true"/>-->

    <LinearLayout
        android:id="@+id/card_top"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@drawable/banner_bottom"
        android:backgroundTint="@color/satin_gold_calmer">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="16dp"
            android:text="@string/title_change_profile"
            android:textSize="@dimen/text_size_title"
            android:textStyle="bold" />

    </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_name"
            style="@style/DietinTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/ic_person_divider">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/attribute_name"
            android:inputType="text|textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email"
            style="@style/DietinTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/ic_email_divider">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/attribute_email"
            android:inputType="text|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_change_profile"
        style="@style/DietinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/jet"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/hint_change_profile"
        android:textColor="@color/white"
        app:icon="@drawable/ic_edit"
        app:iconPadding="8dp" />


</LinearLayout>

